...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Controller.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/mainChannelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/please_log_in_header"
        android:textAlignment="center"
...
